# Lumora

./: .gitignore  LICENSE  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: build.rs  inject.js  main.rs
ui/: index.html
